fix issue with white space

--- a/src/Components/Movie/Movie.css
+++ b/src/Components/Movie/Movie.css
@@ -22,7 +22,7 @@
     display: block;
     font-weight: 600;
     font-size: 2.0em;
-    line-height: 0.1em;
+
 }
 
 
